@@ -1,7 +1,9 @@
 Version 0.3.3
 
-- Added an as.matrix() method for 'pias' objects. This makes it easy to aggregate a price index as a matrix operation; just matrix multiplying the aggregation matrix with the elemental indexes.
+- Added an as.matrix() method for 'pias' objects. This makes it easy to aggregate a price index as a matrix operation; just matrix multiply the aggregation matrix with the elemental indexes.
 
 - Added an as.data.frame() method for 'pias' objects. This is useful for writing price-updated weights with, e.g., write.csv().
 
 - Added an as_index() method for data frames. This is faster and simpler than turning a data frame into an index with elemental_index(df$value, df$period, df$level).
+
+- The 'chain' argument found in some of the methods for elemental_index() and as_index() to mark an index as chainable has been replaced by the more desriptive 'chainable' argument. Partial matching of argument names means this is backwards compatible. The is_chain_index() function is now deprecated, and replaced with the is_chainable_index() function.
